# gputils

./: .gitignore  Makefile  README.md  generate_device_mma_hpp.py  meson.build  pyproject.toml  rand_utils.hpp
benchmarks/: fma.cu  l2-cache-bandwidth.cu  local-transpose.cu  mma-int4.cu  shared-memory.cu  tensor-cores.cu
include/: gputils.hpp
include/gputils/: Array.hpp  Barrier.hpp  CudaStreamPool.hpp  Epoll.hpp  File.hpp  Socket.hpp  ThreadSafeRingBuffer.hpp  constexpr_functions.hpp  cuda_utils.hpp  device_mma.hpp  mem_utils.hpp  pybind11.hpp  pybind11_utils.hpp  rand_utils.hpp  string_utils.hpp  system_utils.hpp  test_utils.hpp  time_utils.hpp  xassert.hpp
loose_ends/: bit-mapping.cu
reverse_engineering/: output_3090.txt  reveng-mma-int4.cu  reverse-engineer-mma.cu
src/: Array.cu  Barrier.cu  CudaStreamPool.cu  Epoll.cu  Socket.cu  cuda_utils.cu  mem_utils.cu  string_utils.cpp  system_utils.cu  test_utils.cu
src_bin/: reverse-engineer-mma.cu  scratch.cu  show-devices.cu  test-array.cu  test-memcpy-kernels.cu  test-sparse-mma.cu  time-atomic-add.cu  time-fma.cu  time-local-transpose.cu  time-memcpy-kernels.cu  time-shared-memory.cu  time-tensor-cores.cu  time-warp-shuffle.cu
src_lib/: Array.cu  Barrier.cu  CpuThreadPool.cu  CudaStreamPool.cu  Epoll.cu  File.cu  Socket.cu  cuda_utils.cu  mem_utils.cu  memcpy_kernels.cu  rand_utils.cu  string_utils.cu  system_utils.cu  test_utils.cu
src_pybind11/: gputils_pybind11.cu  pybind11_utils.cu
src_python/gputils/: __init__.py
tests/: reverse-engineer-fragments.cu  scratch.cu  test-array.cu  test-sparse-mma.cu
utils/: show-devices.cu
